--- a/views/test.ejs
+++ b/views/test.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WEBSITE UNDER CONSTRUCTION!! :)</title>
 </head>
 <body style="background-color: aliceblue;">
     <h1 style ="text-align: center; font-size:x-large; color:pink;">HELLO! OUR WEBSITE IS UNDER RENOVATION , SORRY FOR THE INCONVENIENCE AND FEEL FREE TO CALL 609 516-8688 FOR ANY QUESTION OR APPOIMENT :)</h1>
