--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -78,7 +78,7 @@
         </div>
 <div class="container-contact100">
   <div class="wrap-contact100">
-    <form class="contact100-form validate-form" action="/"method="post">
+    <form class="contact100-form validate-form" action="/thanks"method="POST">
       <span class="contact100-form-title">
         Send Us A Message
       </span>
@@ -115,7 +115,7 @@
 
       <div class="wrap-input100 validate-input" data-validate = "Message is required">
         <label class="label-input100" for="message">Message</label>
-        <textarea id="message" class="input100" name="message" placeholder="Type your message here..."></textarea>
+        <input id="message" class="input100" name="message" placeholder="Type your message here...">
         <span class="focus-input100"></span>
       </div>
 
